[package]
name = "bp3d-lua"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Lua base library and tools for BP3D."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/lua"
readme = "./README.MD"
keywords = ["lua"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", optional = true }
rlua = "0.19.1"

[features]
math = []
vector = ["nalgebra"]
quaternion = ["vector"]
