[package]
name = "bp3d-lua"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Lua base library and tools for BP3D."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/lua"
readme = "./README.MD"
keywords = ["lua"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", optional = true }
num-traits = "0.2.14"
rlua = { version = "0.19.4", features = ["lua-no-oslib"] }
noise = { version = "0.7.0", optional = true }
rand = {version = "0.8.5", optional = true }

[features]
math = []
vector = ["nalgebra"]
quaternion = ["vector"]
random = ["rand"]
